<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:text="@string/textViewText"
        android:layout_marginHorizontal="10dp"
        android:textSize="30sp"
        android:gravity="center_vertical|end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />


    <Button
        android:onClick="setDefault"
        android:id="@+id/buttonAC"
        android:layout_width="280dp"
        android:layout_height="80dp"
        android:text="@string/acText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonDivide"
        app:layout_constraintHorizontal_bias="0.122"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.058" />

    <Button
        android:onClick="action"
        android:id="@+id/buttonDivide"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/buttonDivideText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toEndOf="@+id/buttonAC"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.058" />

    <Button
        android:onClick="addNum"
        android:id="@+id/button7"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/button7Text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAC"
        app:layout_constraintVertical_bias="0.049" />

    <Button
        android:onClick="addNum"
        android:id="@+id/button8"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/button8Text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.089"
        app:layout_constraintStart_toEndOf="@+id/button7"
        app:layout_constraintTop_toBottomOf="@+id/buttonAC"
        app:layout_constraintVertical_bias="0.049" />

    <Button
        android:onClick="addNum"
        android:id="@+id/button9"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/button9Text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.164"
        app:layout_constraintStart_toEndOf="@+id/button8"
        app:layout_constraintTop_toBottomOf="@+id/buttonAC"
        app:layout_constraintVertical_bias="0.049" />

    <Button
        android:onClick="action"
        android:id="@+id/buttonMultiply"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/buttonMultiplyText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.593"
        app:layout_constraintStart_toEndOf="@+id/button9"
        app:layout_constraintTop_toBottomOf="@+id/buttonDivide"
        app:layout_constraintVertical_bias="0.049" />

    <Button
        android:onClick="addNum"
        android:id="@+id/button4"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/button4Text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button7"
        app:layout_constraintVertical_bias="0.056" />

    <Button
        android:onClick="addNum"
        android:id="@+id/button5"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/button5Text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.089"
        app:layout_constraintStart_toEndOf="@+id/button4"
        app:layout_constraintTop_toBottomOf="@+id/button8"
        app:layout_constraintVertical_bias="0.056" />

    <Button
        android:onClick="addNum"
        android:id="@+id/button6"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/button6Text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.164"
        app:layout_constraintStart_toEndOf="@+id/button5"
        app:layout_constraintTop_toBottomOf="@+id/button9"
        app:layout_constraintVertical_bias="0.056" />

    <Button
        android:onClick="action"
        android:id="@+id/buttonMinus"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/buttonMinusText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.593"
        app:layout_constraintStart_toEndOf="@+id/button6"
        app:layout_constraintTop_toBottomOf="@+id/buttonMultiply"
        app:layout_constraintVertical_bias="0.056" />

    <Button
        android:onClick="addNum"
        android:id="@+id/button1"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/button1Text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4"
        app:layout_constraintVertical_bias="0.09" />

    <Button
        android:onClick="addNum"
        android:id="@+id/button2"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/button2Text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.089"
        app:layout_constraintStart_toEndOf="@+id/button1"
        app:layout_constraintTop_toBottomOf="@+id/button5"
        app:layout_constraintVertical_bias="0.085" />

    <Button
        android:onClick="addNum"
        android:id="@+id/button3"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/button3Text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.164"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/button6"
        app:layout_constraintVertical_bias="0.09" />

    <Button
        android:onClick="action"
        android:id="@+id/buttonPlus"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/buttonPlusText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button3"
        app:layout_constraintTop_toBottomOf="@+id/buttonMinus"
        app:layout_constraintVertical_bias="0.09" />

    <Button
        android:onClick="addNum"
        android:id="@+id/button0"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/buttonZeroText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button1"
        app:layout_constraintVertical_bias="0.271" />

    <Button
        android:onClick="addPoint"
        android:id="@+id/buttonPoint"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/buttonPointText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.089"
        app:layout_constraintStart_toEndOf="@+id/button0"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        app:layout_constraintVertical_bias="0.271" />

    <Button
        android:onClick="back"
        android:id="@+id/buttonBack"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/buttonBackText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.164"
        app:layout_constraintStart_toEndOf="@+id/buttonPoint"
        app:layout_constraintTop_toBottomOf="@+id/button3"
        app:layout_constraintVertical_bias="0.271" />

    <Button
        android:onClick="onClickEquals"
        android:id="@+id/buttonEquals"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/buttonEqualsText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.593"
        app:layout_constraintStart_toEndOf="@+id/buttonBack"
        app:layout_constraintTop_toBottomOf="@+id/buttonPlus"
        app:layout_constraintVertical_bias="0.271" />


</androidx.constraintlayout.widget.ConstraintLayout>